results/SVCOMP/0-shot/log-BinaryTree-2024_03_19_00_14_14.txt
public class BinaryTree {
  private class Node {
    int value;
    Node left;
    Node right;

    //@ public invariant left != this && right != this;
    //@ public invariant left != right;
    //@ public invariant left != null && right != null;
  }

  private /*@ nullable @*/ Node root = null;

  //@ ensures root.value == v;
  //@ ensures root.left == null && root.right == null;
  public void insert(int v) {
    // Implementation not provided for JML specification
  }

  //@ requires root != null;
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
  public boolean search(int v) {
    // Implementation not provided for JML specification
  }
}
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:7: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != this && right != this;
                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:7: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != this && right != this;
                                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:8: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != right;
                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:8: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != right;
                                 ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:9: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != null && right != null;
                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:9: error: An identifier with package visibility may not be used in a invariant clause with public visibility
    //@ public invariant left != null && right != null;
                                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:14: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures root.value == v;
              ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:14: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures root.value == v;
                  ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:15: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures root.left == null && root.right == null;
              ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:15: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures root.left == null && root.right == null;
                  ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:15: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures root.left == null && root.right == null;
                                   ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:15: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures root.left == null && root.right == null;
                                       ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:20: error: An identifier with private visibility may not be used in a requires clause with public visibility
  //@ requires root != null;
               ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                         ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                                  ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                                           ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                                                    ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                                                              ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n == root || n.left == root || n.right == root; n.value == v);
                                                                                                     ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                          ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                                   ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                                            ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                                                     ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                                                               ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n == root || n.left == root || n.right == root; n.value != v);
                                                                                                      ^
25 errors

